contrast color fix

--- a/app/static_src/sass/components/_buttons.scss
+++ b/app/static_src/sass/components/_buttons.scss
@@ -245,7 +245,7 @@ button.text-link {
 .button--warning {
     border: .063rem solid $supplement-orange;
     background-color: $supplement-orange;
-    color: $primary-white;
+    color: $primary-black;
 
     &.button--secondary {
         background-color: $primary-white;
